Corrected admin list title alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -501,7 +501,6 @@ input {
 #adminListTitle {
    font-family: 'Barlow Condensed', sans-serif;
    padding-top: 125px;
-   padding-left: 70px;
    text-align: left;
 }
 
